hphp/hack/test/typecheck/decl_lessthan.php.exp
File "decl_lessthan.php", line 3, characters 12-18:
Yield can only appear as a statement or on the right of an assignment (Parsing[1002])
