hphp/hack/test/typecheck/decl_lessthan.php
<?hh // partial
function foo($x) {
  if ($x < yield 5) {

  }
}
